--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Student Input</title>
-    <link rel="stylesheet" href="input.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
@@ -19,7 +19,7 @@
                 list</button>
         </div>
     </div>
-    <script src="input.js"></script>
+    <script src="index.js"></script>
 </body>
 
 </html>
