--- a/classroom.html
+++ b/classroom.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Classroom Manager</title>
     <!-- Google Fonts -->
@@ -16,13 +17,33 @@
     </div>
     <div class="navbar hidden">
         <!-- <div class="navbar-buttons"> -->
-        <button id="random1">Select x1</button>
-        <button id="random2">Select x2</button>
-        <button id="create-groups">Create Groups</button>
-        <button id="reset">Reset</button>
+        <button id="random1"><i class="fa-solid fa-person"></i></button>
+        <button id="random2">
+            <i class="fa-solid fa-person"></i>
+            <i class="fa-solid fa-person"></i>
+        </button>
+        <button id="create-groups"><i class="fa-solid fa-user-group"></i></button>
+        <button id="reset">
+            <i class="fa-solid fa-arrows-rotate"></i>
+        </button>
         <!-- </div> -->
     </div>
-    <button class="toggle-navbar">^</button>
+    <button class="toggle-navbar">
+        <i class="fa-solid fa-circle-chevron-up"></i>
+    </button>
+
+    <div id="popup" class="popup hidden">
+        <div class="popup-content">
+            <label for="numGroups">How many groups? (2-10)</label>
+            <div>
+                <input type="number" id="numGroups" min="2" max="10" />
+            </div>
+            <div>
+                <button id="confirmButton">Confirm</button>
+                <!-- <button id="cancelButton">Cancel</button> -->
+            </div>
+        </div>
+    </div>
 
     <!-- Script -->
     <script src="classroom.js"></script>
